# Breast-Tumor-Segmentation

./: CMakeLists.txt  Calibration.cpp  Calibration.h  ChangeVolumePropertiesWidget.cpp  ChangeVolumePropertiesWidget.h  ChangeVolumePropertiesWidget.ui  CheckCalibrationError.h  CheckCalibrationErrorWidget.cpp  CheckCalibrationErrorWidget.h  CheckCalibrationErrorWidget.ui  CropImagesWidget.cpp  CropImagesWidget.h  CropImagesWidget.ui  EstimateSphereFromPoints.cpp  EstimateSphereFromPoints.h  ImageSegmentation.cpp  ImageSegmentation.h  ImageSegmentationWidget.cpp  ImageSegmentationWidget.h  ImageSegmentationWidget.ui  MedSafeTracker.cpp  MedSafeTracker.h  MedSafeTrackerTest.cpp  PivotCalibration.cpp  PivotCalibration.h  PivotCalibrationUI.cxx  PivotCalibrationUI.fl  PivotCalibrationUI.h  PolarisConfigurationWidget.cpp  PolarisConfigurationWidget.h  PolarisConfigurationWidget.ui  PolarisTracker.cpp  PolarisTracker.h  PolarisTrackerTest.cpp  ProbeCalibrationWidget.cpp  ProbeCalibrationWidget.h  ProbeCalibrationWidget.ui  QVTKImageWidget.cpp  QVTKImageWidget.h  QVTKImageWidgetCommand.cpp  (+62 more)
Data/: Needle.rom  NeedleCalibrationParameters.txt  PointerCalibrationParameters.txt  Reference.rom  USProbe.rom  USProbeCalibrationParameters.txt
Data/Probabilities/: IntensityProbability30.txt  IntensityProbability31.txt  TextureProbability30.txt
